--- a/index.html
+++ b/index.html
@@ -7,8 +7,43 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-    <h1>Ida Apayo</h1>
-    <h2>About me</h2>
+    <div class="container">
+        <div class="row">
+        <div class="col-md-6">
+          <h1>Ida Apayo</h1>
+            <img src="assets/image1.jpg" alt="a picture of me!">
+            <br>
+            <br>
+            <br>
+            <br>
+        </div>
+        <div class="col-md-6">
+          <div class="row">
+            <div class="col-md-3">
+              <a href="contats.html">
+                <img src="assets/feedbackicon.png" alt="HTML tutorial" style="width:64px;height:64px;border:0;">
+              </a>
+          </div>
+          <div class="col-md-3">
+            <a href="education.html">
+              <img src="assets/educationicon.png" alt="HTML tutorial" style="width:64px;height:64px;border:0;">
+            </a>
+        </div>
+      </div>
+    </div>
+     <br>
+     <br>
+     <br>
+     <br>
+     <h3>Who is Ida?</h3>
+     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+  </div>
+  <footer>
+    <img src="assets/footer1.jpg" alt="" style="width:250px;length:1000px;border:0;height:100px;">
+</div>
+
+
 
   </body>
 </html>
