personal stuff commit

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
      <br>
      <br>
      <h3>Who is Ida?</h3>
-     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+     <p>Well ,where should I begin? I am a lot of things.But I like to think that I am a very open-minded and out-going person.I am curently a student studying <a href="https://en.wikipedia.org/wiki/Computer_science">Computer science.</a>I enjoy the challenge hat comes with it and I hope to be a software engineer or web designer in the near future.If I am not coding or fooling around with friends,i am probably reading a book or on pintrest.</p>
+     
 
   </div>
   <footer>
